# Indica

./: .gitignore  CMakeLists.txt  README.md  calculate_programming_contest_result.cpp  hackerearth_operations_on_0s_and_1s.cpp
01_introduction/: CMakeLists.txt
01_introductory_problems/: CMakeLists.txt  missing_number.cpp  weird_algorithm.cpp
1.introduction/: arithmetic_operations  arithmetic_operations.cpp  floating_point_numbers  floating_point_numbers.cpp  input_output_issues  input_output_issues.cpp
10.backtracking/: matrix_traversal_paths  matrix_traversal_paths.cpp  n_queen_problem  n_queen_problem.cpp
11.greedy_algorithms/: complete_search  gfg_approach  gfg_approach.cpp  job_scheduling_gfgs.cpp  job_scheduling_greedy  job_scheduling_greedy.cpp  job_scheduling_using_complete_search.cpp  test_case.txt
12.dynamic_programming/: anatomy_of_bottom_up_dynamic_programming  anatomy_of_bottom_up_dynamic_programming.cpp  fibonacci_series_bottomup  fibonacci_series_bottomup.cpp  fibonacci_series_bu_constantspace  fibonacci_series_bu_constantspace.cpp  fibonacci_series_top_down  fibonacci_series_top_down.cpp  lis_recursive  lis_topdowndp  longest_increasing_subsequence  longest_increasing_subsequence.cpp  minimum_number_of_coins  minimum_number_of_coins.cpp  minimum_number_of_coins_bottom_up_dp  minimum_number_of_coins_with_lookup
12.dynamic_programming/longest_common_subsequence_problems/: lcs_topdowndp  recursive_lcs.cpp  tddp_lcs.cpp
14.trie/: trie_impl.cpp
15.bit_manipulation/: representing_sets.cpp
2.maximum_subarray_sum/: max_difference  max_difference.cpp  max_subarray_sum_1  max_subarray_sum_1.cpp  max_subarray_sum_2  max_subarray_sum_2.cpp  max_subarray_sum_3  max_subarray_sum_3.cpp
3.sorting/: counting_sort  counting_sort_for_character_arrays  sorting_in_cpp  sorting_in_cpp.cpp
4.searching/binary-search/: binary_search
4.searching/jump-search/: jump_search  jump_search.cpp
5.number_of_factors/: number_of_common_factors
6.ceiling_of_array_avg/: ceiling_of_array_avg  ceiling_of_array_avg.cpp
7.cpp_datastructures/1.dynamic_arrays/: dynamic_arrays_using_strings  dynamic_arrays_using_strings.cpp  dynamic_arrays_using_vectors  dynamic_arrays_using_vectors.cpp
8.complete_search/: complete_search_using_bit_manipulation  complete_search_using_recursion  complete_search_using_recursion_naive_approach  complete_search_using_recursion_naive_approach.cpp  self_taught_comp_search  subset_with_given_sum.cpp
9.permutations/: candy_distribution_animesh.js  candy_distribution_sumitm  candy_distribution_sumitm.cpp  permutations_recursive  permutations_recursive.cpp  permutations_with_stl_api  permutations_with_stl_api.cpp
ADTImpl/: BST.cpp  BinarySearchTreeImpl.cpp  CMakeLists.txt  DoublyLinkedListImpl.cpp  LinkedListImpl.cpp  LinkedListNaiveImpl.cpp  PriorityQueueLinkedListImpl.cpp  QueueArrayImpl.cpp  QueueLinkedListImpl.cpp  README.md  StackArrayImpl.cpp  StackLinkedListImpl.cpp
ADTImpl/Heap/: CMakeLists.txt  MaxHeapImpl.cpp  MaxHeapTestCase.txt
ADTImpl/Trie/: ABOUT_TRIE.md  CMakeLists.txt  TrieDict.cpp
AssortedProblems/: CMakeLists.txt  README.md
AssortedProblems/Array/: CMakeLists.txt  CandyDistribution.cpp  MaxDifference.cpp  MaximizeStockProfit.cpp  MissingElementFromArrayPair.cpp  OddOccurrence.cpp  RotatedArraySearch.cpp  SingleOccurrence.cpp
AssortedProblems/DynamicProgramming/: CMakeLists.txt  LongestCommonSubstringTopDownDP.cpp  RodCuttingBottomUpDP.cpp  RodCuttingTopDownDP.cpp
AssortedProblems/Maths/: CMakeLists.txt  XOREquation.cpp
AssortedProblems/Recursion/: CMakeLists.txt  DigitPrinterRecursive.cpp  GeneralizedJosephus.cpp  JosephusProblem.cpp  LongestCommonSubsequenceRecursive.cpp  Permutations.cpp
CSES.fiProblemSet/: CMakeLists.txt
CSES.fiProblemSet/01_introductory_problems/: CMakeLists.txt  chessboard_and_queens.cpp  increasing_array.cpp  repetitions.cpp
CppFeatures/: Boost_multi_index_demo.cpp  CMakeLists.txt  ComptProg.cpp  ConstexprGCD.cpp  EffModernCpp.cpp  ExpFeatures.cpp  IO.cpp  Inheritance.cpp  LowLevelThreadFeature.cpp  MoveSemantics.cpp  RuleOfFive.cpp  RuleOfThree.cpp  SmartPointers.cpp  functors_lambda_fptrs.cpp  interview_problems.cpp  jthreads.cpp  stl.cpp  turing.cpp
CppFeatures/multithreading/: 2threads_demo.cpp  CMakeLists.txt  Mutex.cpp  Promise.cpp  TestAndSetLockIdiom.cpp  Threads.cpp  stdthreadbasics01.cpp
CppFeatures/templates/: CMakeLists.txt  effec_cpp.cpp  temp_class.cpp  temp_class.h
EOPI/: CMakeLists.txt
EOPI/20_multithreading/: CMakeLists.txt
MyCodeSchool/: CMakeLists.txt  README.md
MyCodeSchool/Maths/: CMakeLists.txt  decimal_to_binary_display.cpp  factors_of_a_number.cpp  hcf_by_euclids_algorithm.cpp  prime_factorization_of_num.cpp  trial_division.cpp
MyCodeSchool/Maths/area-of-polygons/: area_of_polygon.cpp
MyCodeSchool/Maths/direction-of-point-from-line/: direction_of_point_from_line.cpp
MyCodeSchool/Maths/hcf-by-prime-factorization/: hcf_by_prime_factorization.cpp
MyCodeSchool/Maths/seive-of-eratosthenes/: sieve_of_eratosthenes.cpp
MyCodeSchool/Pointer/: CMakeLists.txt  arrayAsFunctArg.cpp  outputParams.cpp  pointerToPointer.cpp
MyCodeSchool/Pointer/character_array_and_pointers/: character-array-and-pointers.c
MyCodeSchool/Pointer/integer_array_and_pointers/: integer-array-and-pointers.c
MyCodeSchool/Pointer/introduction/: main.c  pointer-experiments.c
MyCodeSchool/Pointer/types_of_pointer/: pointer-type  pointer-type.c
MyCodeSchool/Stack/: CMakeLists.txt  reversing_a_linked_list_using_explicit_stack.cpp  reversing_a_string_using_stack.cpp  stack_impl_using_arrays.cpp  stack_impl_using_linked_list.cpp
TMCC/: CMakeLists.txt  README.md  cmds.sh
TheBook/: CMakeLists.txt
TheBook/chap_07_graphs/: CMakeLists.txt  bellmanFord.cpp  bfs.cpp  bipartiteColoring.cpp  floydWarshall.cpp  topologicalSort.cpp
TheC++ProgrammingLangurge-4thEdition-AssignmentProblems/: CMakeLists.txt
array/: CMakeLists.txt  dutch_national_flag.cpp  odd_even_classification.cpp
eopi/: CMakeLists.txt
malloncpp/: CMakeLists.txt  main01.cpp
nptel_cpp/: CMakeLists.txt  demo01.cpp
(+79 files in other folders)
