cmake_minimum_required(VERSION 3.10)
project(CPP_FEATURES)

set(CMAKE_CXX_STANDARD 20)

add_executable(CandyDistribution CandyDistribution.cpp)
add_executable(MaxDifference MaxDifference.cpp)
add_executable(MaximizeStockProfit MaximizeStockProfit.cpp)
add_executable(MissingElementFromArrayPair MissingElementFromArrayPair.cpp)
add_executable(OddOccurrence OddOccurrence.cpp)
add_executable(SingleOccurrence SingleOccurrence.cpp)
