cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)

add_executable(weird_algorithm weird_algorithm.cpp)
add_executable(missing_number missing_number.cpp)
add_executable(repetitions repetitions.cpp)
add_executable(increasing_array increasing_array.cpp)
add_executable(beautiful_permutations beautiful_permutations.cpp)
add_executable(number_spiral number_spiral.cpp)
add_executable(two_knights two_knights.cpp)
add_executable(two_knights_faster two_knights_faster.cpp)
add_executable(two_sets two_sets.cpp)
add_executable(chessboard_and_queens chessboard_and_queens.cpp)
