add_executable(area_of_polygon area_of_polygon.cpp)
add_executable(decimal_to_binary_display decimal_to_binary_display.cpp)
add_executable(direction_of_point_from_line direction_of_point_from_line.cpp)
add_executable(factors_of_a_number factors_of_a_number.cpp)
add_executable(hcf_by_euclids_algorithm hcf_by_euclids_algorithm.cpp)
add_executable(hcf_by_prime_factorization hcf_by_prime_factorization.cpp)
add_executable(prime_factorization_of_num prime_factorization_of_num.cpp)
add_executable(sieve_of_eratosthenes sieve_of_eratosthenes.cpp)
add_executable(trial_division trial_division.cpp)
